--- a/levels/settings/mp_flowstate.kv
+++ b/levels/settings/mp_flowstate.kv
@@ -2,16 +2,12 @@
 {
     "PakList"
     {
-		"common_flowstate_small"		"1"
-		"flowstate_all_loot"			"1"
+        "mp_rr_canyonlands_mu1"       "1"
+        "mp_rr_desertlands_64k_x_64k" "1"
 
-		//Load halo mod assets
-		"common_flowstate_halomod"		"1"
-		"flowstate_all_loot_halomod"			"1"
-"fs_spawns"						"1"
-		
-        "mp_rr_desertlands_64k_x_64k" 	"1"
-        "mp_rr_canyonlands_mu1"       	"1"
+        // Load halo mod assets
+        //"common_flowstate_halomod"    "1"
+        //"flowstate_all_loot_halomod"  "1"
     }
 
     "StreamDB" "mp_rr_canyonlands_staging"
